--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:postgresql://localhost:5432/teste3
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.show-sql: true
