--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,44 @@
-spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:postgresql://localhost:5432/teste3
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.show-sql: true
+###############################################
+### DATABASE CONNECTIVITY CONFIGURATIONS ###
+###############################################
+database.ip = ${DB_IP:localhost}
+database.port = ${DB_PORT:5432}
+database.user = ${DB_USER:postgres}
+database.password = ${DB_PASSWORD:root}
+database.name = ${DB_DBNAME:teste3}
+
+
+spring.sql.init.platform=postgres
+spring.datasource.url = jdbc:postgresql://${database.ip}:${database.port}/${database.name}
+spring.datasource.username = ${database.user}
+spring.datasource.password = ${database.password}
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto = validate
+# create prima data creaza tabelele
+# validate verifica structura tabelelor
+# update actualizeaza
+
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.show_sql=true
+
+server.tomcat.threads.max = 1
+###############################################
+### LOGGING CONFIGURATIONS ###
+###############################################
+logging.level.root=error
+logging.level.org.springframework=error
+logging.level.ro.tuc=error
+
+
+###############################################
+### EMBEDDED TOMCAT CONFIGURATIONS ###
+###############################################
+server.port=${PORT:8080}
+
+
+#spring.rabbitmq.addresses=amqps://drrnofsa:UHAVahn3ktgFA7TUaR-bX60LrXPusJf0@rat.rmq2.cloudamqp.com/drrnofsa
+#spring.rabbitmq.queue=sensor
+#spring.rabbitmq.listener.simple.missing-queues-fatal=false
