--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,6 +32,7 @@ logging.level.root=error
 logging.level.org.springframework=error
 logging.level.ro.tuc=error
 
+#spring.main.allow-bean-definition-overriding=true
 
 ###############################################
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
