--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -66,6 +66,12 @@
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-security</artifactId>-->
 <!--        </dependency>-->
+<!--        <dependency>-->
+<!--        <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--        <artifactId>jackson-annotations</artifactId>-->
+<!--        <version>3.0.0+</version>-->
+<!--    </dependency>-->
+
     </dependencies>
 
     <build>
