properly working league table, all crud operations

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ database.ip = ${DB_IP:localhost}
 database.port = ${DB_PORT:5432}
 database.user = ${DB_USER:postgres}
 database.password = ${DB_PASSWORD:root}
-database.name = ${DB_DBNAME:teste3}
+database.name = ${DB_DBNAME:teste2}
 
 
 spring.sql.init.platform=postgres
@@ -16,7 +16,7 @@ spring.datasource.password = ${database.password}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = create
 # create prima data creaza tabelele
 # validate verifica structura tabelelor
 # update actualizeaza
